--- a/gradle.properties
+++ b/gradle.properties
@@ -4,20 +4,20 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.8
+minecraft_version=1.21.5
+yarn_mappings=1.21.5+build.1
 loader_version=0.16.10
 
 # Fabric API
-fabric_version=0.114.2+1.21.4
+fabric_version=0.119.5+1.21.5
 
 # Mod Properties
 mod_id=autoreconnect
 mod_name=AutoReconnect
-mod_version=1.21.4-2.4.1
+mod_version=1.21.5-2.4.1
 maven_group=autoreconnect
 archives_base_name=autoreconnect
 
 # Dependencies
-modmenu_version=13.0.0
-clothconfig_version=15.0.127
+modmenu_version=14.0.0-rc.1
+clothconfig_version=17.0.144
